--- a/src/css/style.css
+++ b/src/css/style.css
@@ -124,36 +124,22 @@ a{
 .container-footer h5 {
     color: white;
 }
-
-.sidebar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position:absolute;
-    left:0;
-    background-color: black;
+.fixed-whatsapp {
+    position: fixed;
+    bottom: 20px; 
+    right: 20px; 
+    z-index: 1000; 
+    background-color: #198754;
     color: white;
-    width: 7rem;
-    height: 100%;
-}
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
-    color: white;
-    background-color: #1c1d1f;
-}
-.nav-link {
-    color: #ffffff;
+    text-decoration: none;
+    padding: 10px 10px;
+    border: none;
+    border-radius: 100%; 
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3); 
 }
 
-.nav-link:focus, .nav-link:hover {
-    color: rgb(101, 101, 101);
-}
-.fondo{
-    padding-top:8%;
-    background-image: url('/src/img/assets/background.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat:repeat-y;
-    height: 100vh;
+.fixed-whatsapp img{
+    width: 2rem;
 }
 @media screen and (max-width: 768px) {
     .fondo {
