--- a/src/css/productos.css
+++ b/src/css/productos.css
@@ -39,3 +39,14 @@
         padding-top: 12%;
     }
 }
+
+.modal{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 2;
+    width: 100%;
+    height: 100vh;
+}
