--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,6 +24,11 @@ a{
     filter: drop-shadow(0px 0px 5px gray);
     margin-right: 0.5vw;
 }
+.logo-small {
+    width: 3rem;
+    filter: drop-shadow(0px 0px 5px gray);
+    margin-right: 0.5vw;
+}
 
 .navbar-collapse {
     flex-direction: row-reverse;
